// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render CardInnerBody 1`] = `
<div
  class="wp-components-surface wp-components-card css-1qt13ik"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  >
    <div
      class="wp-components-flex wp-components-card-header css-1lzhbb"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="wp-components-card-inner-body css-rlgt1m"
      data-g2-c16t="true"
      data-g2-component="CardInnerBody"
    >
      Some people are worth melting for.
    </div>
    <div
      class="wp-components-flex wp-components-card-footer css-skobos"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <button
        aria-busy="false"
        class="wp-components-flex wp-components-base-button wp-components-button css-wej0j3"
        data-destructive="false"
        data-g2-c16t="true"
        data-g2-component="Button"
        data-icon="false"
        type="button"
      >
        <span
          class="wp-components-flex-item css-19mrak6"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Agree
        </span>
        <span
          class="wp-components-elevation css-17x6dun"
          data-g2-c16t="true"
          data-g2-component="ButtonElevation"
        />
      </button>
    </div>
  </div>
  <div
    class="wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-1873flw"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-surface wp-components-card css-1qt13ik"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  >
    <div
      class="wp-components-flex wp-components-card-header css-1lzhbb"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="wp-components-scrollable wp-components-card-body css-815zk"
      data-g2-c16t="true"
      data-g2-component="CardBody"
    >
      <div
        class="css-1qs21wj"
        data-g2-component="ScrollableContent"
      >
        Some people are worth melting for.
      </div>
    </div>
    <div
      class="wp-components-flex wp-components-card-footer css-skobos"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <button
        aria-busy="false"
        class="wp-components-flex wp-components-base-button wp-components-button css-wej0j3"
        data-destructive="false"
        data-g2-c16t="true"
        data-g2-component="Button"
        data-icon="false"
        type="button"
      >
        <span
          class="wp-components-flex-item css-19mrak6"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Agree
        </span>
        <span
          class="wp-components-elevation css-17x6dun"
          data-g2-c16t="true"
          data-g2-component="ButtonElevation"
        />
      </button>
    </div>
  </div>
  <div
    class="wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-1873flw"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render elevation 1`] = `
<div
  class="wp-components-surface wp-components-card css-1qt13ik"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-zytxex"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render no elevation 1`] = `
<div
  class="wp-components-surface wp-components-card css-1qt13ik"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-16j6c8z"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-12htjgm"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;
